Fix: Improve custom scrollbar.

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -21,7 +21,7 @@
 
 /* Custom Scrollbar Styles */
 .custom-scrollbar::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.75rem;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
@@ -31,4 +31,5 @@
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background: #334155;
   border-radius: 0.5rem;
+  border: 2px solid #0f172a;
 }
